# myPokerProject

./: CMakeLists.txt  main.cpp
include/: BlackjackGame.h  Card.h  Deck.h  Game.h  LANBlackjackGame.h  LANPokerGame.h  Menu.h  NetworkDiscovery.h  NetworkManager.h  NetworkProtocol.h  Player.h  PokerGame.h  Renderer.h  Utils.h
lib/SDL3-3.4.8/i686-w64-mingw32/include/SDL3/: SDL_revision.h
lib/SDL3-3.4.8/i686-w64-mingw32/lib/cmake/SDL3/: SDL3ConfigVersion.cmake
lib/SDL3-3.4.8/x86_64-w64-mingw32/lib/cmake/SDL3/: SDL3ConfigVersion.cmake  SDL3sharedTargets.cmake
lib/SDL3-3.4.8/x86_64-w64-mingw32/lib/pkgconfig/: sdl3.pc
lib/SDL3_image-3.4.4/i686-w64-mingw32/lib/cmake/SDL3_image/: SDL3_imageConfigVersion.cmake
lib/SDL3_net-3.2.0/: .git-hash  INSTALL.md
lib/SDL3_net-3.2.0/i686-w64-mingw32/lib/cmake/SDL3_net/: SDL3_net-shared-targets-release.cmake  SDL3_netConfig.cmake
lib/SDL3_net-3.2.0/i686-w64-mingw32/lib/pkgconfig/: sdl3-net.pc
lib/SDL3_net-3.2.0/x86_64-w64-mingw32/lib/cmake/SDL3_net/: SDL3_net-shared-targets.cmake
src/: BlackjackGame.cpp  Card.cpp  Deck.cpp  Game.cpp  LANBlackjackGame.cpp  LANPokerGame.cpp  Menu.cpp  NetworkDiscovery.cpp  NetworkManager.cpp  Player.cpp  PokerGame.cpp  Renderer.cpp  Utils.cpp
